--- a/main.html
+++ b/main.html
@@ -16,6 +16,9 @@
   </head>
   <body>
    <div class="container-fluid main">
+
+ <!-- Header -->
+
       <header class="container">
         <nav class="nav justify-content-between">
 
