правки после занятия

--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Varela+Round&display=swap">
+
     <link rel="stylesheet" href="css/style2.css">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 
@@ -13,6 +16,7 @@
 
     <title>Document</title>
 </head>
+
 <body>
 
   <header>
@@ -99,105 +103,99 @@
 
   <section class="tarify">
     <div class="container price">
-    <div class="row justify-content-center title">
-    <h2> Выбери свой тарифный план</h2>
-    <div class="container">
-      <div class="row">
-    <div class="col-md-4" id="price-table">
-      <div class="row">
-          <ul>
 
-            <li>
-              <div class="title_box">Интернет</div>
-              <div class="but_box1">
-                <button class="btn but_free" href="#">
-                  <a>350 руб.</a>
-                </button>
+      <h2> Выбери свой тарифный план</h2>
+
+      <div class="row justify-content-center title">
+
+              <div class="col-md-4" id="price-table">
+                <ul class="body_price">
+                  <li>
+                    <div class="title_box">Интернет</div>
+                    <div class="but_box1">
+                      <button class="btn but_free" href="#">
+                        <a>350 руб.</a>
+                      </button>
+                    </div>
+                    <div class="text_box">Серфи сеть <br> на максимальных скоростях</div>
+                    <div class="text_box2">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="14" height="10" viewBox="0 0 14 10"><g><g><path fill="#6fc754" d="M12.81 2.25L5.581 9.304a1.283 1.283 0 0 1-1.775 0L.255 5.865a1.187 1.187 0 0 1 0-1.717 1.282 1.282 0 0 1 1.776 0l2.664 2.578L11.033.528a1.286 1.286 0 0 1 1.776 0 1.19 1.19 0 0 1 0 1.721z"/></g></g></svg>
+                        100 Мбит/с</div>
+
+                    <div class="but_box_down1">
+                      <button class="btn btn-danger" href="#">
+                        <a>Подключить</a>
+                      </button>
+                    </div>
+                  </li>
+                </ul>
+             </div>
+ 
+
+              <div class="col-md-4" id="price-table">
+                <ul class="body_price">
+                  <li>
+                    <div class="title_box">Интернет + ТВ</div>
+                    <div class="but_box2">
+                      <button class="btn but_free" href="#">
+                        <a>500 руб.</a>
+                      </button>
+                    </div>
+                    <div class="text_box">Качай! Смотри!</div>
+                    <div class="text_middle">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="14" height="10" viewBox="0 0 14 10"><g><g><path fill="#6fc754" d="M12.81 2.25L5.581 9.304a1.283 1.283 0 0 1-1.775 0L.255 5.865a1.187 1.187 0 0 1 0-1.717 1.282 1.282 0 0 1 1.776 0l2.664 2.578L11.033.528a1.286 1.286 0 0 1 1.776 0 1.19 1.19 0 0 1 0 1.721z"/></g></g></svg>
+                        100 Мбит/с</div>
+                    <div class="text_box2">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="14" height="10" viewBox="0 0 14 10"><g><g><path fill="#6fc754" d="M12.81 2.25L5.581 9.304a1.283 1.283 0 0 1-1.775 0L.255 5.865a1.187 1.187 0 0 1 0-1.717 1.282 1.282 0 0 1 1.776 0l2.664 2.578L11.033.528a1.286 1.286 0 0 1 1.776 0 1.19 1.19 0 0 1 0 1.721z"/></g></g></svg>
+                        150 каналов</div>
+                    <div class="but_box_down2">
+                      <button class="btn btn-danger" href="#">
+                        <a>Подключить</a>
+                      </button>
+                    </div>
+                  </li>
+                </ul>
               </div>
-              <div class="text_box">Серфи сеть <br> на максимальных скоростях</div>
-              <div class="text_box2">
-                <svg xmlns="http://www.w3.org/2000/svg" width="14" height="10" viewBox="0 0 14 10"><g><g><path fill="#6fc754" d="M12.81 2.25L5.581 9.304a1.283 1.283 0 0 1-1.775 0L.255 5.865a1.187 1.187 0 0 1 0-1.717 1.282 1.282 0 0 1 1.776 0l2.664 2.578L11.033.528a1.286 1.286 0 0 1 1.776 0 1.19 1.19 0 0 1 0 1.721z"/></g></g></svg>
-                100 Мбит/с</div>
 
-              <div class="but_box_down1">
-                <button class="btn btn-danger" but_get_started" href="#">
-                  <a>Подключить</a>
-                </button>
+
+              <div class="col-md-4" id="price-table">
+                <ul class="body_price">
+                  <li class="">
+                    <div class="title_box">Интернет + ТВ <br> + Видеонаблюдение</div>
+                    <div class="but_box3">
+                      <button class="btn but_free" href="#">700 руб.
+                      </button>
+                    </div>
+                    <div class="text_box">Премиальный пакет услуг</div>
+                    <div class="text_middle">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="14" height="10" viewBox="0 0 14 10"><g><g><path fill="#6fc754" d="M12.81 2.25L5.581 9.304a1.283 1.283 0 0 1-1.775 0L.255 5.865a1.187 1.187 0 0 1 0-1.717 1.282 1.282 0 0 1 1.776 0l2.664 2.578L11.033.528a1.286 1.286 0 0 1 1.776 0 1.19 1.19 0 0 1 0 1.721z"/></g></g></svg>
+                        100 Мбит/с</div>
+                    <div class="text_box2">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="14" height="10" viewBox="0 0 14 10"><g><g><path fill="#6fc754" d="M12.81 2.25L5.581 9.304a1.283 1.283 0 0 1-1.775 0L.255 5.865a1.187 1.187 0 0 1 0-1.717 1.282 1.282 0 0 1 1.776 0l2.664 2.578L11.033.528a1.286 1.286 0 0 1 1.776 0 1.19 1.19 0 0 1 0 1.721z"/></g></g></svg>
+                        150 каналов</div>
+                    <div class="text_box2">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="14" height="10" viewBox="0 0 14 10"><g><g><path fill="#6fc754" d="M12.81 2.25L5.581 9.304a1.283 1.283 0 0 1-1.775 0L.255 5.865a1.187 1.187 0 0 1 0-1.717 1.282 1.282 0 0 1 1.776 0l2.664 2.578L11.033.528a1.286 1.286 0 0 1 1.776 0 1.19 1.19 0 0 1 0 1.721z"/></g></g></svg>
+                        3 камеры</div>
+                    <div class="but_box_down3">
+                      <button class="btn btn-danger" href="#">
+                        <a>Подключить</a>
+                      </button>
+                    </div>
+
+
+                  </li>
+                </ul>
               </div>
-            </li>
-          </ul>
-      </div>
-    </div>
 
-    <div class="col-md-4" id="price-table">
-      <div class="row">
-          <ul>
-              <li class="">
-                  <div class="title_box">Интернет + ТВ</div>
-                  <div class="but_box2">
-                    <button class="btn but_free" href="#">
-                      <a>500 руб.</a>
-                    </button>
-                  </div>
-                  <div class="text_box">Качай! Смотри!</div>
-                  <div class="text_middle">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="14" height="10" viewBox="0 0 14 10"><g><g><path fill="#6fc754" d="M12.81 2.25L5.581 9.304a1.283 1.283 0 0 1-1.775 0L.255 5.865a1.187 1.187 0 0 1 0-1.717 1.282 1.282 0 0 1 1.776 0l2.664 2.578L11.033.528a1.286 1.286 0 0 1 1.776 0 1.19 1.19 0 0 1 0 1.721z"/></g></g></svg>
-                    100 Мбит/с</div>
-                  <div class="text_box2">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="14" height="10" viewBox="0 0 14 10"><g><g><path fill="#6fc754" d="M12.81 2.25L5.581 9.304a1.283 1.283 0 0 1-1.775 0L.255 5.865a1.187 1.187 0 0 1 0-1.717 1.282 1.282 0 0 1 1.776 0l2.664 2.578L11.033.528a1.286 1.286 0 0 1 1.776 0 1.19 1.19 0 0 1 0 1.721z"/></g></g></svg>
-                   150 каналов</div>
-                  <div class="but_box_down2">
-                    <button class="btn btn-danger" but_get_started" href="#">
-                      <a>Подключить</a>
-                    </button>
-                  </div>
-
-
-              </li>
-
-            </ul>
+            </div>
           </div>
-        </div>
-
-
-<div class="col-md-4" id="price-table">
-      <div class="row">
-          <ul>
-              <li class="">
-                <div class="title_box">Интернет + ТВ <br> + Видеонаблюдение</div>
-                <div class="but_box3">
-                  <button class="btn but_free" href="#">700 руб.
-                  </button>
-                </div>
-                <div class="text_box">Премиальный пакет услуг</div>
-                <div class="text_middle">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="14" height="10" viewBox="0 0 14 10"><g><g><path fill="#6fc754" d="M12.81 2.25L5.581 9.304a1.283 1.283 0 0 1-1.775 0L.255 5.865a1.187 1.187 0 0 1 0-1.717 1.282 1.282 0 0 1 1.776 0l2.664 2.578L11.033.528a1.286 1.286 0 0 1 1.776 0 1.19 1.19 0 0 1 0 1.721z"/></g></g></svg>
-                 100 Мбит/с</div>
-                <div class="text_box2">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="14" height="10" viewBox="0 0 14 10"><g><g><path fill="#6fc754" d="M12.81 2.25L5.581 9.304a1.283 1.283 0 0 1-1.775 0L.255 5.865a1.187 1.187 0 0 1 0-1.717 1.282 1.282 0 0 1 1.776 0l2.664 2.578L11.033.528a1.286 1.286 0 0 1 1.776 0 1.19 1.19 0 0 1 0 1.721z"/></g></g></svg>
-                 150 каналов</div>
-                <div class="text_box2">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="14" height="10" viewBox="0 0 14 10"><g><g><path fill="#6fc754" d="M12.81 2.25L5.581 9.304a1.283 1.283 0 0 1-1.775 0L.255 5.865a1.187 1.187 0 0 1 0-1.717 1.282 1.282 0 0 1 1.776 0l2.664 2.578L11.033.528a1.286 1.286 0 0 1 1.776 0 1.19 1.19 0 0 1 0 1.721z"/></g></g></svg>
-                 3 камеры</div>
-                <div class="but_box_down3">
-                  <button class="btn btn-danger" but_make_me_a_pro" href="#">
-                    <a>Подключить</a>
-                  </button>
-                </div>
-
-
-            </li>
-          </ul>
-      </div>
-  </div>
-</div>
-</div>
   </section>
  
   <section class="news">
     <div class="container">
       <div class="row justify-content-center">
         <h2> Новости</h2>
+
         <div class="card-deck">
           <div class="card">
             <img src="img/akcia.jpg" class="card-img-top" alt="...">
