--- a/index.html
+++ b/index.html
@@ -64,13 +64,11 @@
         <div class="col-8 mx-auto text_first_section"> 
           <h1 class="title_first_section"> What happens tommorow?</h1>
           <p class="col-8 mx-auto description">The sight ot the tumblers restored Bob Sawyer to a degree of equanimity which he had not possesed since his interview with his landlady. His face brightened up, and he began to feel quite convivial.</p>
-          <p class="button">
+          <div class="button">
       
             <a href="#" class="btn btn-outline-secondary second_but">
-              
-              <svg class="arrow" xmlns="http://www.w3.org/2000/svg" width="10" height="11" viewBox="0 0 10 11"><g><g><path fill="#26272d" d="M.537 9.67V1.237c0-.392.46-.684.914-.455.364.184 7.636 3.892 8.257 4.209.408.208.4.704 0 .913-.447.232-7.747 3.96-8.276 4.218-.387.19-.895-.02-.895-.452z"/></g></g></svg>
-              Watch video</a>
-          </p>
+                          <b>Watch video</b></a>
+          </div>
         </div>
 
   </div>
@@ -104,14 +102,14 @@
           <div class="col-md-6 phone">
 
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6 right_col3">
             <div class="card card_third_column">
               <div class="card-body">
                 <h2 class="card-title title_column"> Your day <br> is protected</h2>
                 <p class="card-text text_column">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis culpa alias eligendi consequatur tempore eos minus modi, rerum hic magnam, cumque dolorem, est id temporibus incidunt obcaecati praesentium. Rem, ducimus? dolorem, est id temporibus incidunt obcaecati praesentium. Rem, ducimus?</p>
 
                 <div class="buttons">
-                  <button class="btn btn-primary but_try_to_huck_us" href="#">
+                  <button class="btn btn-primary justify-content-center but_try_to_huck_us" href="#">
                     <a>Try to huck us</a>
                     <svg class="arrow" xmlns="http://www.w3.org/2000/svg" width="13" height="11" viewBox="0 0 13 11"><g><g><path fill="#fff" d="M8.162.783l3.879 3.879c.508.508.534 1.315.08 1.854a1.431 1.431 0 0 1-.254.26l-3.705 3.705a1.372 1.372 0 0 1-1.94-1.94L7.68 7.086H1.507a1.423 1.423 0 1 1 0-2.846H7.74L6.222 2.723a1.372 1.372 0 0 1 1.94-1.94z"/></g></g></svg>
                   </button>
@@ -198,18 +196,16 @@
                     </button></div>
             </div>
               </div>
-            <div class="row justify-content-center">
-              <button class="btn btn-primary but_app_store " href="#">
-                <div class="row justify-content-between black_but1">
-                  <div class="apple_logo"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="27" viewBox="0 0 16 20"><g><g><path fill="#fff" d="M15.985 14.174c-.015.068-.386 1.368-1.308 2.688-.77 1.163-1.577 2.3-2.86 2.32-1.245.029-1.664-.74-3.092-.74-1.441 0-1.887.72-3.082.769-1.22.045-2.153-1.241-2.952-2.394-1.595-2.352-2.838-6.63-1.172-9.54.807-1.427 2.279-2.346 3.852-2.37 1.222-.026 2.356.833 3.107.833.737 0 2.14-1.027 3.585-.873.605.017 2.326.24 3.437 1.875-.09.054-2.05 1.217-2.03 3.609.025 2.866 2.484 3.813 2.515 3.823zM8.33 4.649c-.136-1.077.393-2.223.985-2.922.67-.793 1.833-1.4 2.763-1.441.122 1.119-.318 2.222-.96 3.032-.67.799-1.743 1.41-2.788 1.331z"/></g></g></svg></div>
-                  <div class="text_button">
-                    <div class="text_button1">Download on the </div>
-                    <div class="text_button2"> App Store</div>
-                  </div>
-                </div>
-              </button>
-          </div> 
-        </div>
+
+              <div class="or_download_from">
+                OR DOWNLOAD FROM
+              </div>
+
+              <button class="btn btn_app_store">   
+              </button>             
+
+
+            </div>
         </section>
 
         <section class="section seventh_section">
@@ -411,17 +407,8 @@
                 <p class="card-text">It was some time before he obtained any answer, and the reply, when made, was unpropitious.</p>
               </div>
                 <div>
-                  <button class="btn btn-primary but_footer" href="#">
-                    <div class="row">
-                      <div class="apple_logo"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="27" viewBox="0 0 16 20"><g><g><path fill="#fff" d="M15.985 14.174c-.015.068-.386 1.368-1.308 2.688-.77 1.163-1.577 2.3-2.86 2.32-1.245.029-1.664-.74-3.092-.74-1.441 0-1.887.72-3.082.769-1.22.045-2.153-1.241-2.952-2.394-1.595-2.352-2.838-6.63-1.172-9.54.807-1.427 2.279-2.346 3.852-2.37 1.222-.026 2.356.833 3.107.833.737 0 2.14-1.027 3.585-.873.605.017 2.326.24 3.437 1.875-.09.054-2.05 1.217-2.03 3.609.025 2.866 2.484 3.813 2.515 3.823zM8.33 4.649c-.136-1.077.393-2.223.985-2.922.67-.793 1.833-1.4 2.763-1.441.122 1.119-.318 2.222-.96 3.032-.67.799-1.743 1.41-2.788 1.331z"/></g></g></svg></div>
-                        <div class="text_button2"> 
-                          <ul>
-                            <li class="li1">Download on the</li>
-                            <li class="li2">App Store</li>
-                          </ul>
-                        </div>
-                    </div>
-                  </button>
+                  <button class="btn btn_app_store2">   
+                  </button>    
                 </div>
                 <div class="row labels justify-content-between">
                   <a href="https://twitter.com/?lang=ru" target="blanck"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="14" viewBox="0 0 17 14"><g><g opacity=".3"><path fill="#26272d" d="M16.255 1.477a6.58 6.58 0 0 1-1.902.528A3.358 3.358 0 0 0 15.81.15a6.577 6.577 0 0 1-2.103.814 3.283 3.283 0 0 0-2.416-1.06c-1.83 0-3.311 1.501-3.311 3.354 0 .264.03.52.085.766-2.75-.14-5.19-1.476-6.823-3.506a3.375 3.375 0 0 0-.448 1.687c0 1.164.585 2.191 1.473 2.792a3.277 3.277 0 0 1-1.5-.42v.043c0 1.625 1.141 2.98 2.656 3.29a3.29 3.29 0 0 1-1.495.057c.421 1.333 1.644 2.302 3.093 2.33a6.588 6.588 0 0 1-4.112 1.435c-.267 0-.531-.015-.79-.046a9.286 9.286 0 0 0 5.075 1.507c6.09 0 9.42-5.112 9.42-9.545 0-.146-.004-.29-.01-.434a6.787 6.787 0 0 0 1.652-1.736z"/></g></g></svg></a>
