--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <p class="card-text text_column">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis culpa alias eligendi consequatur tempore eos minus modi, rerum hic magnam, cumque dolorem, est id temporibus incidunt obcaecati praesentium. Rem, ducimus? dolorem, est id temporibus incidunt obcaecati praesentium. Rem, ducimus?</p>
 
                 <div class="buttons">
-                  <button class="btn btn-primary justify-content-center but_try_to_huck_us" href="#">
+                  <button class="btn btn-primary but_try_to_huck_us" href="#">
                     <a>Try to huck us</a>
                     <svg class="arrow" xmlns="http://www.w3.org/2000/svg" width="13" height="11" viewBox="0 0 13 11"><g><g><path fill="#fff" d="M8.162.783l3.879 3.879c.508.508.534 1.315.08 1.854a1.431 1.431 0 0 1-.254.26l-3.705 3.705a1.372 1.372 0 0 1-1.94-1.94L7.68 7.086H1.507a1.423 1.423 0 1 1 0-2.846H7.74L6.222 2.723a1.372 1.372 0 0 1 1.94-1.94z"/></g></g></svg>
                   </button>
