--- a/index2.html
+++ b/index2.html
@@ -14,7 +14,7 @@
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
-    <title>Document</title>
+    <title>Связист</title>
 </head>
 
 <body>
@@ -22,9 +22,9 @@
   <header>
     <div class="container">
 
-      <div class="row">
+      <div class="row head">
           <div class="col-3 logo">
-              <img src="img/logo.jpg" width="100%" alt="">
+              <img src="img/logo sv_300.png" width="100%" alt="">
           </div>
           <div class="col-6 phone_number">
             <a href="tel:+78314577711"> Подключение: +7 (83145) 777-11 </a>
@@ -42,9 +42,9 @@
 
   <section class="navigation">
 
-    <div class="row main">
-      <div class="container">
-      <div class="col-12">
+    <div class="row">
+      <div class="container main">
+      <div class="col-12 nav_bar">
         <ul class="nav justify-content-between">
           <li class="nav-item">
             <a class="nav-link active" href="#">ИНТЕРНЕТ</a>
@@ -70,7 +70,7 @@
 
   <section class="banner">
     <div class="row">
-      <div class="container">
+      <div class="container car">
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -103,10 +103,9 @@
 
   <section class="tarify">
     <div class="container price">
-
-      <h2> Выбери свой тарифный план</h2>
-
       <div class="row justify-content-center title">
+        <div class="col-md-12 title_price">        
+          <h2> Выбери свой тарифный план</h2></div>
 
               <div class="col-md-4" id="price-table">
                 <ul class="body_price">
@@ -117,7 +116,7 @@
                         <a>350 руб.</a>
                       </button>
                     </div>
-                    <div class="text_box">Серфи сеть <br> на максимальных скоростях</div>
+                    <div class="text_box">Качай <br> на максимальных скоростях</div>
                     <div class="text_box2">
                       <svg xmlns="http://www.w3.org/2000/svg" width="14" height="10" viewBox="0 0 14 10"><g><g><path fill="#6fc754" d="M12.81 2.25L5.581 9.304a1.283 1.283 0 0 1-1.775 0L.255 5.865a1.187 1.187 0 0 1 0-1.717 1.282 1.282 0 0 1 1.776 0l2.664 2.578L11.033.528a1.286 1.286 0 0 1 1.776 0 1.19 1.19 0 0 1 0 1.721z"/></g></g></svg>
                         100 Мбит/с</div>
@@ -205,7 +204,7 @@
               <p class="card-text">Интернет от 100 Мбит/с! Подключение в день обращения!</p>
 
 
-              <a href="#" class="btn btn-secondary">Читать новость</a>
+              <a href="#" class="btn btn-secondary">Читать далее</a>
             </div>
           </div>
           <div class="card">
@@ -216,7 +215,7 @@
               <p class="card-text">Дорогие абоненты, поздравляем вас с Днем России!</p>
  
 
-              <a href="#" class="btn btn-secondary">Читать новость</a>
+              <a href="#" class="btn btn-secondary">Читать далее</a>
             </div>
           </div>
           <div class="card">
@@ -227,7 +226,7 @@
               <p class="card-text">Дарим подарки за подключение к нашим услугам</p>
 
 
-              <a href="#" class="btn btn-secondary">Читать новость</a>
+              <a href="#" class="btn btn-secondary">Читать далее</a>
             </div>
           </div>
         </div>
@@ -239,7 +238,7 @@
   </section>
     
 
-  <footer>
+  <section class="footer">
     <div class="container down">
     <div class="last_row1"> </div>    
     <div class="row">
@@ -248,7 +247,7 @@
         <div class="card card_footer">
 
           <div class="card-title">
-            <img src="img/logo.jpg" width="200 px" alt="">
+            <img src="img/logo sv.png" width="200 px" alt="">
           </div>
             
       </div>
@@ -302,6 +301,6 @@
 
 
 
-  </footer>
+  </section>
 </body>
 </html>
